# AdventOfCode

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: day01.cpp.7AC66D99637F0995.idx  utils.hpp.5136C0FFD14AEE9F.idx
include/: utils.hpp
src/: utils.cpp
src/years/2021/day01/: day01.cpp
src/years/2022/day01/: day01.cpp
src/years/2022/day01/input/: problem.md
src/years/2022/day02/: day02.cpp
src/years/2022/day02/input/: puzzle.md
src/years/2022/day03/: day03.cpp
src/years/2022/day03/input/: puzzle.md
src/years/2022/day04/: day04.cpp
src/years/2022/day04/input/: problem.md
src/years/2022/day05/: day05.cpp
src/years/2022/day05/input/: problem.md
src/years/2022/day06/: day06.cpp
src/years/2023/day01/: day01.cpp
src/years/2023/day02/: day02.cpp
src/years/2023/day03/: day03.cpp
src/years/2023/day03/input/: problem.md
src/years/2023/day04/: day04.cpp
src/years/2025/day01/: day01.cpp
src/years/2025/day01/input/: puzzle.md
src/years/2025/day02/: day02.cpp
src/years/2025/day02/input/: puzzle.md
src/years/2025/day03/: day03.cpp
src/years/2025/day03/input/: puzzle.md
src/years/2025/day04/: day04.cpp
src/years/2025/day05/: day05.cpp
src/years/2025/day06/: day06.cpp
src/years/2025/day07/: day07.cpp
src/years/2025/day08/: day08.cpp
src/years/2025/day09/: day09.cpp
years/2023/day01/: day01.cpp
years/2023/day01/input/: puzzle.md
years/2023/day02/: day02.cpp
years/2023/day02/input/: puzzle.md
years/2023/day03/: day03.cpp
years/2023/day04/: day04.cpp
years/2023/day04/input/: puzzle.md
(+4 files in other folders)
